[package]
name = "moneybags"
version = "0.1.0"
edition = "2021"
license = "MIT"
readme = "README.md"
publish = false

[dependencies]
anyhow = "1"
clap = { version = "3", features = ["derive"] }
csv = "1"
rust_decimal = "1"
serde = { version = "1", features = ["derive"] }
serde_plain = "1"

[dev-dependencies]
maplit = "1"
